igt@xe_evict@evict-beng-.* - dmesg-warn - WARNING: CPU: .* PID: .* at drivers/gpu/drm/xe/xe_vm.c:.* xe_vma_destroy
<4> [1102.867743] ------------[ cut here ]------------
<4> [1102.867749] WARNING: CPU: 5 PID: 3152 at drivers/gpu/drm/xe/xe_vm.c:1066 xe_vma_destroy+0x4a8/0x530 [xe]
<7> [1102.867734] xe 0000:03:00.0: [drm:xe_migrate_copy [xe]] Pass 0, sizes: 8388608 & 8388608
<4> [1102.867906] Modules linked in: fuse r8153_ecm cdc_ether usbnet xe i2c_algo_bit drm_ttm_helper ttm drm_suballoc_helper gpu_sched drm_display_helper x86_pkg_temp_thermal drm_kms_helper coretemp syscopyarea sysfillrect mei_pxp mei_hdcp kvm_intel sysimgblt pmt_telemetry pmt_class fb_sys_fops kvm drm_buddy irqbypass cfbfillrect e1000e cfbimgblt crct10dif_pclmul r8152 cfbcopyarea crc32_pclmul mii ghash_clmulni_intel i2c_i801 ptp fb pps_core i2c_smbus mei_me fbdev mei intel_vsec wmi_bmof video wmi drm drm_panel_orientation_quirks ip_tables x_tables
<4> [1102.868116] CPU: 5 PID: 3152 Comm: xe_evict Tainted: G W 6.4.0-xe #1
<4> [1102.868123] Hardware name: Intel Corporation Tiger Lake Client Platform/TigerLake H DDR4 SODIMM RVP, BIOS TGLSFWI1.R00.4064.A00.2102041619 02/04/2021
<4> [1102.868128] RIP: 0010:xe_vma_destroy+0x4a8/0x530 [xe]
<4> [1102.868280] Code: 01 00 00 00 00 ad de 48 89 85 f8 00 00 00 e8 2f bf 8d e1 48 c7 c7 50 ca a0 83 e8 53 74 80 e0 8b 05 4d dc d8 e2 e9 f0 fb ff ff <0f> 0b e9 a6 fb ff ff 0f 0b e9 23 ff ff ff 0f 0b e9 0b fc ff ff 4c
<4> [1102.868286] RSP: 0018:ffff8881579c7960 EFLAGS: 00010287
<4> [1102.868294] RAX: ffff888112f544a0 RBX: ffff888112f54000 RCX: ffffffffa0c7e9a8
<4> [1102.868300] RDX: dffffc0000000000 RSI: ffff888112f54478 RDI: ffff88814088d370
<4> [1102.868305] RBP: ffff88814088d300 R08: ffffffffa0c7e98e R09: fffffbfff099e3d7
<4> [1102.868310] R10: 0000000000000001 R11: fffffbfff099e3d6 R12: 0000000000000000
<4> [1102.868315] R13: ffff88814088d370 R14: ffff888401c16800 R15: ffff888112f54000
<4> [1102.868320] FS: 00007faa57a45700(0000) GS:ffff888850480000(0000) knlGS:0000000000000000
<4> [1102.868325] CS: 0010 DS: 0000 ES: 0000 CR0: 0000000080050033
<4> [1102.868330] CR2: 00007faa5ab7ba40 CR3: 00000006484d2004 CR4: 0000000000f70ee0
<4> [1102.868335] DR0: 0000000000000000 DR1: 0000000000000000 DR2: 0000000000000000
<4> [1102.868340] DR3: 0000000000000000 DR6: 00000000fffe0ff0 DR7: 0000000000000400
<4> [1102.868345] PKRU: 55555554
<4> [1102.868349] Call Trace:
<4> [1102.868354] <TASK>
<4> [1102.868359] ? __warn+0xa5/0x200
<4> [1102.868368] ? xe_vma_destroy+0x4a8/0x530 [xe]
<4> [1102.868554] ? report_bug+0x216/0x220
<4> [1102.868567] ? handle_bug+0x3c/0x70
<7> [1102.868424] xe 0000:03:00.0: [drm:xe_migrate_copy [xe]] Pass 1, sizes: 8388608 & 8388608
<4> [1102.868575] ? exc_invalid_op+0x18/0x50
<4> [1102.868582] ? asm_exc_invalid_op+0x1a/0x20
<4> [1102.868595] ? xe_vma_destroy+0x2e/0x530 [xe]
<4> [1102.868749] ? xe_vma_destroy+0x48/0x530 [xe]
<4> [1102.868897] ? xe_vma_destroy+0x4a8/0x530 [xe]
<4> [1102.869054] xe_vma_destroy_unlocked+0x20a/0x350 [xe]
<7> [1102.869145] xe 0000:03:00.0: [drm:xe_migrate_copy [xe]] Pass 2, sizes: 8388608 & 8388608
<4> [1102.869204] ? __pfx_xe_vma_destroy_unlocked+0x10/0x10 [xe]
<4> [1102.869355] ? ttm_eu_reserve_buffers+0x4c6/0x800 [ttm]
<4> [1102.869401] ? queue_work_on+0x6e/0x90
<4> [1102.869415] xe_vm_close_and_put+0x6c0/0x950 [xe]
<4> [1102.869614] ? __pfx_xe_vm_close_and_put+0x10/0x10 [xe]
<4> [1102.869766] ? xa_erase+0x28/0x40
<4> [1102.869786] ? do_raw_spin_unlock+0xa7/0x140
<4> [1102.869800] xe_vm_destroy_ioctl+0x132/0x210 [xe]
<7> [1102.869809] xe 0000:03:00.0: [drm:xe_migrate_copy [xe]] Pass 3, sizes: 8388608 & 8388608
<4> [1102.869954] drm_ioctl_kernel+0x16f/0x250 [drm]
<4> [1102.870036] ? __pfx_xe_vm_destroy_ioctl+0x10/0x10 [xe]
<4> [1102.870191] ? __pfx_drm_ioctl_kernel+0x10/0x10 [drm]
<4> [1102.870265] ? __pfx_xe_vm_destroy_ioctl+0x10/0x10 [xe]
<4> [1102.870424] ? __pfx_xe_vm_destroy_ioctl+0x10/0x10 [xe]
<7> [1102.870468] xe 0000:03:00.0: [drm:xe_migrate_copy [xe]] Pass 4, sizes: 8388608 & 8388608
<4> [1102.870617] drm_ioctl+0x35e/0x620 [drm]
<4> [1102.870698] ? __pfx_drm_ioctl+0x10/0x10 [drm]
<4> [1102.870769] ? __pfx_lock_release+0x10/0x10
<4> [1102.870783] ? restore_fpregs_from_fpstate+0x99/0x140
<4> [1102.870795] ? __fget_files+0x14b/0x210
<4> [1102.870813] __x64_sys_ioctl+0xb1/0xf0
<4> [1102.870823] do_syscall_64+0x3c/0x90
<4> [1102.870831] entry_SYSCALL_64_after_hwframe+0x72/0xdc
<4> [1102.870838] RIP: 0033:0x7faa5aa733ab
<4> [1102.870845] Code: 0f 1e fa 48 8b 05 e5 7a 0d 00 64 c7 00 26 00 00 00 48 c7 c0 ff ff ff ff c3 66 0f 1f 44 00 00 f3 0f 1e fa b8 10 00 00 00 0f 05 <48> 3d 01 f0 ff ff 73 01 c3 48 8b 0d b5 7a 0d 00 f7 d8 64 89 01 48
<4> [1102.870850] RSP: 002b:00007faa57a44758 EFLAGS: 00000246 ORIG_RAX: 0000000000000010
<4> [1102.870859] RAX: ffffffffffffffda RBX: 00007faa57a44790 RCX: 00007faa5aa733ab
<4> [1102.870864] RDX: 00007faa57a44790 RSI: 0000000040186444 RDI: 0000000000000006
<4> [1102.870869] RBP: 0000000040186444 R08: 0000000000000006 R09: 00000004f8000000
<4> [1102.870874] R10: 0000000000000001 R11: 0000000000000246 R12: 00007faa57a44790
<4> [1102.870879] R13: 0000000000000006 R14: 0000000000003000 R15: 0000000000000006
<4> [1102.870900] </TASK>
<4> [1102.870904] irq event stamp: 473083
<4> [1102.870908] hardirqs last enabled at (473089): [<ffffffff811f9b4b>] __up_console_sem+0x6b/0x80
<4> [1102.870916] hardirqs last disabled at (473094): [<ffffffff811f9b30>] __up_console_sem+0x50/0x80
<4> [1102.870922] softirqs last enabled at (472914): [<ffffffff8255c6f5>] __do_softirq+0x385/0x485
<4> [1102.870929] softirqs last disabled at (472909): [<ffffffff8111cf75>] irq_exit_rcu+0x95/0xc0
<4> [1102.870936] ---[ end trace 0000000000000000 ]---